Add "test" to make sure types match with real `node-redis`, fix functions which dont (except for EVAL, EVALSHA, MULTI (and EXEC, technically))

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
         "lib/*"
       ]
     },
-    "sourceMap": true
+    "sourceMap": true,
+    "noImplicitAny": true,
   },
   "include": [
     "lib/**/*",
