--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "dev": "ts-node-dev --respawn --transpile-only lib/index.ts",
+    "dev": "ts-node-dev --respawn --transpile-only index.ts",
     "build": "tsc",
-    "lint": "eslint . --ext .ts",
+    "lint": "eslint . --ext .ts; tsc --noEmit",
     "lint:fix": "eslint . --ext .ts --fix",
     "format": "prettier --write \"lib/**/*.ts\"",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,18 +16,21 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.30.1",
+    "@types/deasync": "^0.1.5",
     "@types/msgpack5": "^3.4.6",
     "@types/node": "^24.0.10",
     "@typescript-eslint/eslint-plugin": "^8.35.1",
     "@typescript-eslint/parser": "^8.35.1",
     "eslint": "^9.30.1",
+    "globals": "^16.3.0",
     "prettier": "^3.6.2",
     "redis": "^5.5.6",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@types/deasync": "^0.1.5",
     "deasync": "^0.1.30",
     "lua.vm.js": "^0.0.1",
     "msgpack5": "^6.0.2"
