--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.30.1",
     "@types/deasync": "^0.1.5",
+    "@types/jsonpath": "^0.2.4",
     "@types/msgpack5": "^3.4.6",
     "@types/node": "^24.0.10",
     "@typescript-eslint/eslint-plugin": "^8.35.1",
@@ -32,6 +33,7 @@
   },
   "dependencies": {
     "deasync": "^0.1.30",
+    "jsonpath": "^1.1.1",
     "lua.vm.js": "^0.0.1",
     "msgpack5": "^6.0.2"
   }
