--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -40,7 +40,8 @@ jobs:
           mkdir tmp
           cd tmp
           npm init -y
-          npm i ../${steps.get_info.outputs.PACKAGE_NAME}-${steps.get_info.outputs.PACKAGE_VERSION}.tgz
+          echo "../${steps.get_info.outputs.PACKAGE_NAME}-${steps.get_info.outputs.PACKAGE_VERSION}.tgz"
+          npm i "../${steps.get_info.outputs.PACKAGE_NAME}-${steps.get_info.outputs.PACKAGE_VERSION}.tgz"
           rm ./node_modules/.package-lock.json
           echo "{ \"name\": \"${steps.get_info.outputs.PACKAGE_NAME}\", \"version\": \"${steps.get_info.outputs.PACKAGE_VERSION}\" }" > ./node_modules/packageInfo.json
           tar -czf ${steps.get_info.outputs.PACKAGE_NAME}@${steps.get_info.outputs.PACKAGE_VERSION}.tgz ./node_modules
