--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -48,16 +48,13 @@ jobs:
           echo "{ \"name\": \"${PACKAGE_NAME}\", \"version\": \"${PACKAGE_VERSION}\" }" > ./node_modules/packageInfo.json
           tar -czf ${PACKAGE_NAME}@${PACKAGE_VERSION}.tgz ./node_modules
 
-      - name: Create GitHub Release
-        id: create_release
-        uses: actions/create-release@v1
+      - name: Get Release ID for tag
+        id: get_release
+        uses: bruceadams/get-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: v${{ steps.get_info.outputs.PACKAGE_VERSION }}
-          release_name: Release v${{ steps.get_info.outputs.PACKAGE_VERSION }}
-          draft: false
-          prerelease: false
+          tag_name: ${{ github.ref_name }}
 
       - name: Upload custom .tgz to Release
         uses: actions/upload-release-asset@v1
@@ -67,3 +64,4 @@ jobs:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./tmp/${steps.get_info.outputs.PACKAGE_NAME}@${steps.get_info.outputs.PACKAGE_VERSION}.tgz
           asset_name: custom-package.tgz
+          asset_content_type: application/gzip
