--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,9 +1,8 @@
 name: Build and Release
 
 on:
-  push:
-    tags:
-      - "v*.*.*" # runs only on version tags (e.g. v1.2.3)
+  release:
+    types: [created]
 
 jobs:
   build:
@@ -48,13 +47,11 @@ jobs:
           echo "{ \"name\": \"${PACKAGE_NAME}\", \"version\": \"${PACKAGE_VERSION}\" }" > ./node_modules/packageInfo.json
           tar -czf ${PACKAGE_NAME}@${PACKAGE_VERSION}.tgz ./node_modules
 
-      - name: Get Release ID for tag
+      - name: Get release
         id: get_release
-        uses: bruceadams/get-release@v1
+        uses: bruceadams/get-release@v1.3.2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref_name }}
 
       - name: Upload custom .tgz to Release
         uses: actions/upload-release-asset@v1
@@ -63,5 +60,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./tmp/${steps.get_info.outputs.PACKAGE_NAME}@${steps.get_info.outputs.PACKAGE_VERSION}.tgz
-          asset_name: custom-package.tgz
+          asset_name: ${steps.get_info.outputs.PACKAGE_NAME}@${steps.get_info.outputs.PACKAGE_VERSION}.tgz
           asset_content_type: application/gzip
