--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -47,9 +47,6 @@ jobs:
           echo "{ \"name\": \"${PACKAGE_NAME}\", \"version\": \"${PACKAGE_VERSION}\" }" > ./node_modules/packageInfo.json
           tar -czf ${PACKAGE_NAME}@${PACKAGE_VERSION}.tgz ./node_modules
 
-      - name: debug
-        run: ls -l ./tmp
-
       - name: Get release
         id: get_release
         uses: bruceadams/get-release@v1.3.2
@@ -62,6 +59,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.get_release.outputs.upload_url }}
-          asset_path: ./tmp/${steps.get_info.outputs.PACKAGE_NAME}@${steps.get_info.outputs.PACKAGE_VERSION}.tgz
-          asset_name: ${steps.get_info.outputs.PACKAGE_NAME}@${steps.get_info.outputs.PACKAGE_VERSION}.tgz
+          asset_path: ./tmp/${{ steps.get_info.outputs.PACKAGE_NAME }}@${{ steps.get_info.outputs.PACKAGE_VERSION }}.tgz
+          asset_name: ${{ steps.get_info.outputs.PACKAGE_NAME }}@${{ steps.get_info.outputs.PACKAGE_VERSION }}.tgz
           asset_content_type: application/gzip
