--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -16,6 +16,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
+          registry-url: 'https://registry.npmjs.org'
 
       - name: Install dependencies
         run: npm ci
@@ -25,6 +26,10 @@ jobs:
 
       - name: Pack npm package
         run: npm pack
+
+      - name: Publish npm package
+        run: |
+          npm publish --provenance --access public
 
       - name: Extract name and version from package.json
         id: get_info
